# jini

./: README.md  docker-compose.yaml
jini_backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
jini_backend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
jini_backend/common/: models.py
jini_backend/config/: urls.py
jini_backend/config/settings/: base.py  dev.py  prod.py
jini_backend/feeds/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
jini_backend/replies/: admin.py  models.py  serializers.py
jini_backend/reviews/: admin.py  models.py  serializers.py
jini_backend/users/: admin.py  emailconfirm.py  filters.py  models.py  permissions.py  serializers.py  socialaccounts.py  urls.py  views.py
jini_backend/users/templates/users/: reset_password.html  verification_email.html
nginx/: Dockerfile  default.conf  nginx.conf
nginx/jini-build/: asset-manifest.json  index.html
nginx/jini-build/static/css/: main.08bfc348.css  main.08bfc348.css.map  main.6f4fc3e0.css  main.6f4fc3e0.css.map  main.822c709b.css  main.822c709b.css.map  main.977d0115.css  main.977d0115.css.map  main.9aba8381.css  main.9aba8381.css.map  main.aa947564.css  main.aa947564.css.map
nginx/jini-build/static/js/: main.a3e91bec.js.LICENSE.txt
